Fix window width being too small

--- a/public/global.css
+++ b/public/global.css
@@ -16,11 +16,9 @@ body {
   box-sizing: border-box;
   color: var(--primary-color);
   display: flex;
-  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   margin: 0;
-  min-width: 200px;
   padding: 8px;
   position: relative;
 }
